Fix code and kbd word spacing

--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -86,6 +86,7 @@ a, %a
 
 code, kbd
   font-family: $b-fontFamily-mono
+  word-spacing: 0
 
 // ----- Images ----- //
 
